--- a/templates/docker-compose-permanent.j2
+++ b/templates/docker-compose-permanent.j2
@@ -9,7 +9,7 @@ RestartSec=10
 EnvironmentFile=/etc/sysconfig/docker-compose-%i
 WorkingDirectory=/etc/docker-compose/%i
 ExecStartPre=/usr/bin/docker-compose pull
-ExecStart=/usr/bin/docker-compose run %i -d
+ExecStart=/usr/bin/docker-compose up %i
 ExecStop=-/usr/bin/docker-compose stop %i
 
 [Install]
